--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 <h3>
 <a id="equipe" class="anchor" href="#equipe" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Equipe</h3>
 
-<p><a href='https://www.facebook.com/aecio.jorge?fref=ts'>Aecio Jorge</a>, <a href='https://www.facebook.com/eduardobreno'>Eduardo Breno</a>, <a href="https://www.facebook.com/yasmim.barreto?fref=ts">Yasmim Barreto</a></p>
+<p><a href='https://www.facebook.com/aecio.jorge?fref=ts'>Aecio Jorge</a>, 
+	<a href='https://www.facebook.com/eduardobreno'>Eduardo Breno</a>, 
+	<a href='https://www.facebook.com/tiago.parente.85'>Tiago Parente</a>,
+	<a href='https://www.facebook.com/ThiCalaza'>Thiago Calazans</a>,
+	<a href="https://www.facebook.com/yasmim.barreto?fref=ts">Yasmim Barreto</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/tiagop85/GGJ">The Sauim Surf</a> is maintained by <a href="https://github.com/tiagop85">tiagop85</a>.</span>
