--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>The Sauim Surf</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" content="https://tiagop85.github.io/GGJ/banner-01.png">
+<meta property="og:title" content="The Sauim Surf">
+<meta property="og:description" content="Game made in the Global Game Jam 2017 at OCEAN - UEA, Manaus - Amazonas - Brazil.">
+
+    
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
