--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="main-content">
 	<h3>
-<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Jogue aqui</h3>
+<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Play here</h3>
 <p>
   <a href='demo/'>The Sauim Surf</a>
       </p> 
